Changed the image path

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
         </p>
 
         <div class="page-actions reveal">
-          <!-- Replace with your real number (no +, no spaces) -->
+          <!-- IMPORTANT: Replace 91YOURNUMBER everywhere with your real number (example: 919876543210) -->
           <a class="btn btn-primary" href="https://wa.me/91YOURNUMBER" target="_blank" rel="noopener">WhatsApp</a>
           <a class="btn btn-ghost" href="tel:+91YOURNUMBER">Call</a>
           <a class="btn btn-ghost" href="mailto:hello@adityaorganicfoods.com">Email</a>
