--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <footer class="site-footer">
     <div class="container footer">
-      <p>© <span id="year"></span> Aditya Organic Foods</p>
+      <p>© 2024–<span id="year"></span> Aditya Organic Foods</p>
       <p>Wholesale button mushrooms • Rudrapur, Uttarakhand</p>
     </div>
   </footer>
