changed the footer note to 2024-current

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -116,7 +116,7 @@
 
   <footer class="site-footer">
     <div class="container footer">
-      <p>© <span id="year"></span> Aditya Organic Foods</p>
+      <p>© 2024-<span id="year"></span> Aditya Organic Foods</p>
       <p>Rudrapur, Uttarakhand</p>
     </div>
   </footer>
