--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <section class="hero hero-compact">
       <div
         class="hero-media"
-        style="background-image:url('assets/images/mushroom-hero.jpg');"
+        style="background-image:url('assets/Images/mushroom-hero.jpg');"
         role="img"
         aria-label="Fresh white button mushrooms close-up"
       ></div>
@@ -154,7 +154,7 @@
 
         <div class="grid-3 media-grid">
           <figure class="media-card reveal">
-            <img src="assets/images/mushroom-hero.jpg" alt="Fresh white button mushrooms close-up" loading="lazy" />
+            <img src="assets/Images/mushroom-hero.jpg" alt="Fresh white button mushrooms close-up" loading="lazy" />
             <figcaption>
               <strong>Fresh harvest</strong>
               <span>Clean, firm caps—ideal for wholesale buyers.</span>
@@ -162,7 +162,7 @@
           </figure>
 
           <figure class="media-card reveal">
-            <img src="assets/images/mushroom-pile.jpg" alt="Pile of white button mushrooms" loading="lazy" />
+            <img src="assets/Images/mushroom-pile.jpg" alt="Pile of white button mushrooms" loading="lazy" />
             <figcaption>
               <strong>Consistent grading</strong>
               <span>Uniform sizing for predictable prep and display.</span>
@@ -170,7 +170,7 @@
           </figure>
 
           <figure class="media-card reveal">
-            <img src="assets/images/mushroom-farm.jpg" alt="Button mushrooms growing in an indoor farm" loading="lazy" />
+            <img src="assets/Images/mushroom-farm.jpg" alt="Button mushrooms growing in an indoor farm" loading="lazy" />
             <figcaption>
               <strong>Indoor cultivation</strong>
               <span>Controlled rooms support steady supply and quality.</span>
@@ -344,7 +344,50 @@
     window.addEventListener("scroll", onScroll, { passive: true });
     window.addEventListener("resize", onScroll);
     onScroll();
+    const isMobile = window.matchMedia("(max-width: 900px)").matches;
 
+if (isMobile) {
+  // stop relying on scroll
+  window.removeEventListener("scroll", onScroll);
+
+  let stage = 0;
+  const stages = [
+    { t: "From detail to delivery.", s: "Freshness starts at the smallest details — clean texture, clean handling." },
+    { t: "The reveal.", s: "Controlled rooms = consistent structure you can trust." },
+    { t: "The full picture.", s: "Grown with consistency so buyers get predictable grading and supply." },
+    { t: "Underneath it all: the network.", s: "Explore: Gallery for real photos, About for process, Contact for orders." },
+  ];
+
+  function renderStage(i){
+    // crossfade like scroll does
+    setStage(i === 0 ? 1:0, i === 1 ? 1:0, i === 2 ? 1:0, i === 3 ? 1:0);
+
+    title.textContent = stages[i].t;
+    sub.textContent = stages[i].s;
+
+    if (i === 3) {
+      myceliumUI.classList.add("on");
+      menuReveal.classList.add("on");
+      header.classList.remove("header-hidden");
+      header.classList.add("header-solid");
+      main.classList.remove("main-hidden");
+    } else {
+      myceliumUI.classList.remove("on");
+      menuReveal.classList.remove("on");
+    }
+  }
+
+  renderStage(0);
+
+  // Tap anywhere to advance
+  document.getElementById("stage").addEventListener("click", () => {
+    stage = Math.min(3, stage + 1);
+    renderStage(stage);
+  });
+
+  // Make story not crazy tall on mobile
+  story.style.height = "120vh";
+}
     // "Enter site" smooth scroll
     if (enterBtn) {
       enterBtn.addEventListener("click", (e) => {
