Some basic edits

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 
     <!-- SCROLL STORY (locks the rest of the site until complete) -->
     <section class="story" id="story">
+      <div
+        class="story-topbrand"
+        id="storyTopbrand"
+        aria-label="Aditya Organic Foods"
+      >
+        <span class="logo" aria-hidden="true"></span>
+        <span class="brand-text">Aditya Organic Foods</span>
+      </div>ß
       <div class="story-sticky">
         <div class="story-stage" id="stage">
           <!-- 4 stacked background layers -->
@@ -404,7 +412,8 @@
           myceliumUI.classList.remove("on");
           menuReveal.classList.remove("on");
         } else if (scrolled < 0.92) {
-          title.textContent = "The full picture.";ß
+          title.textContent = "The full picture.";
+          ß;
           sub.textContent =
             "Grown with consistency so buyers get predictable grading and supply.";
           myceliumUI.classList.remove("on");
