--- a/pages/contact.html
+++ b/pages/contact.html
@@ -121,7 +121,7 @@
     </div>
   </footer>
 
-  <script>
+  <!-- <script>
     const yearEl = document.getElementById("year");
     if (yearEl) yearEl.textContent = new Date().getFullYear();
 
@@ -159,6 +159,7 @@
       }, { threshold: 0.12 });
       revealEls.forEach(el => io.observe(el));
     }
-  </script>
+  </script> -->
+<script src="../assets/js/main.js" defer></script>
 </body>
 </html>
