More edits on the same code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
         <a class="btn btn-primary" href="pages/contact.html">Request a Quote</a>
       </div>
     </header>
-
+    <!-- Brand-only header during story -->
+    <div class="brandbar" id="brandBar" aria-label="Aditya Organic Foods">
+      <div class="brandbar-inner">
+        <span class="logo" aria-hidden="true"></span>
+        <span class="brand-text">Aditya Organic Foods</span>
+      </div>
+    </div>
     <!-- SCROLL STORY (locks the rest of the site until complete) -->
     <section class="story" id="story">
       <div
@@ -56,7 +62,8 @@
       >
         <span class="logo" aria-hidden="true"></span>
         <span class="brand-text">Aditya Organic Foods</span>
-      </div>ß
+      </div>
+      ß
       <div class="story-sticky">
         <div class="story-stage" id="stage">
           <!-- 4 stacked background layers -->
@@ -289,7 +296,7 @@
                 <li>Weekly qty (kg)</li>
                 <li>Pack type (retail / bulk)</li>
                 <li>Delivery frequency</li>
-                <li>City / area</li>
+                <li>City / Area</li>
                 <li>Phone / WhatsApp</li>
               </ul>
             </div>
@@ -364,85 +371,82 @@
       }
 
       function onScroll() {
-        const rect = story.getBoundingClientRect();
-        const vh = window.innerHeight;
-        const total = rect.height - vh;
+  const rect = story.getBoundingClientRect();
+  const vh = window.innerHeight;
+  const total = rect.height - vh;
 
-        // how far into the story (0..1)
-        const scrolled = clamp(-rect.top / (total <= 0 ? 1 : total), 0, 1);
+  // how far into the story (0..1)
+  const scrolled = clamp(-rect.top / (total <= 0 ? 1 : total), 0, 1);
 
-        // top progress bar
-        if (progress) progress.style.transform = `scaleX(${scrolled})`;
+  // top progress bar
+  if (progress) progress.style.transform = `scaleX(${scrolled})`;
 
-        // split into 4 stages (0-0.33-0.66-1)
-        // stage 1 -> 2 crossfade
-        const t1 = clamp(scrolled / 0.33, 0, 1);
-        // stage 2 -> 3 crossfade
-        const t2 = clamp((scrolled - 0.33) / 0.33, 0, 1);
-        // stage 3 -> 4 crossfade
-        const t3 = clamp((scrolled - 0.66) / 0.34, 0, 1);
+  // split into 4 stages (0-0.33-0.66-1)
+  const t1 = clamp(scrolled / 0.33, 0, 1);              // stage 1 -> 2
+  const t2 = clamp((scrolled - 0.33) / 0.33, 0, 1);     // stage 2 -> 3
+  const t3 = clamp((scrolled - 0.66) / 0.34, 0, 1);     // stage 3 -> 4
 
-        // opacities
-        const o1 = 1 - t1;
-        const o2 = t1 * (1 - t2);
-        const o3 = t2 * (1 - t3);
-        const o4 = t3;
+  // opacities
+  const o1 = 1 - t1;
+  const o2 = t1 * (1 - t2);
+  const o3 = t2 * (1 - t3);
+  const o4 = t3;
 
-        setStage(o1, o2, o3, o4);
+  setStage(o1, o2, o3, o4);
 
-        // zoom-out feel
-        const scale = lerp(1.25, 1.02, scrolled);
-        const blur = lerp(0, 0, scrolled);
-        [img1, img2, img3, img4].forEach((el) => {
-          el.style.transform = `scale(${scale})`;
-          el.style.filter = `blur(${blur}px)`;
-        });
+  // zoom-out feel
+  const scale = lerp(1.25, 1.02, scrolled);
+  [img1, img2, img3, img4].forEach((el) => {
+    el.style.transform = `scale(${scale})`;
+    el.style.filter = `blur(0px)`;
+  });
 
-        // text updates by stage
-        if (scrolled < 0.33) {
-          title.textContent = "From detail to delivery.";
-          sub.textContent =
-            "Freshness starts at the smallest details — clean texture, clean handling.";
-          myceliumUI.classList.remove("on");
-          menuReveal.classList.remove("on");
-        } else if (scrolled < 0.66) {
-          title.textContent = "The reveal.";
-          sub.textContent =
-            "A pattern becomes a mushroom — structure you can trust.";
-          myceliumUI.classList.remove("on");
-          menuReveal.classList.remove("on");
-        } else if (scrolled < 0.92) {
-          title.textContent = "The full picture.";
-          ß;
-          sub.textContent =
-            "Grown with consistency so buyers get predictable grading and supply.";
-          myceliumUI.classList.remove("on");
-          menuReveal.classList.remove("on");
-        } else {
-          title.textContent = "Underneath it all: the network.";
-          sub.textContent = "Quality you can count on — from room to route.";
-          myceliumUI.classList.add("on");
-          menuReveal.classList.add("on");
-        }
+  // text updates by stage
+  if (scrolled < 0.33) {
+    title.textContent = "From detail to delivery.";
+    sub.textContent = "Freshness starts at the smallest details — clean texture, clean handling.";
+    myceliumUI.classList.remove("on");
+    menuReveal.classList.remove("on");
+  } else if (scrolled < 0.66) {
+    title.textContent = "The reveal.";
+    sub.textContent = "A pattern becomes a mushroom — structure you can trust.";
+    myceliumUI.classList.remove("on");
+    menuReveal.classList.remove("on");
+  } else if (scrolled < 0.92) {
+    title.textContent = "The full picture.";
+    sub.textContent = "Grown with consistency so buyers get predictable grading and supply.";
+    myceliumUI.classList.remove("on");
+    menuReveal.classList.remove("on");
+  } else {
+    title.textContent = "Underneath it all: the network.";
+    sub.textContent = "Quality you can count on — from room to route.";
+    myceliumUI.classList.add("on");
+    menuReveal.classList.add("on");
+  }
 
-        // unlock site at the end
-        // unlock site at the end (lock only once)
-        window.__siteUnlocked = window.__siteUnlocked || false;
+  // unlock site at the end (lock only once)
+  window.__siteUnlocked = window.__siteUnlocked || false;
 
-        if (!window.__siteUnlocked && scrolled > 0.98) {
-          window.__siteUnlocked = true;
-          header.classList.remove("header-hidden");
-          header.classList.add("header-solid");
-          main.classList.remove("main-hidden");
-        }
+  if (!window.__siteUnlocked && scrolled > 0.98) {
+    window.__siteUnlocked = true;
+    header.classList.remove("header-hidden");
+    header.classList.add("header-solid");
+    main.classList.remove("main-hidden");
+  }
 
-        // once unlocked, never hide header/main again
-        if (window.__siteUnlocked) {
-          header.classList.remove("header-hidden");
-          header.classList.add("header-solid");
-          main.classList.remove("main-hidden");
-        }
-      }
+  // brand-only bar logic:
+  // show it while story is active, hide it once unlocked
+  if (brandBar) {
+    brandBar.style.display = window.__siteUnlocked ? "none" : "block";
+  }
+
+  // once unlocked, never hide header/main again
+  if (window.__siteUnlocked) {
+    header.classList.remove("header-hidden");
+    header.classList.add("header-solid");
+    main.classList.remove("main-hidden");
+  }
+}
 
       window.addEventListener("scroll", onScroll, { passive: true });
       window.addEventListener("resize", onScroll);
