--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,7 +54,7 @@
       <div class="container contact-grid">
         <div class="card reveal">
           <h2>Direct contact</h2>
-          <p class="mini">Replace these placeholders with your real details.</p>
+          <p class="mini">Mr. Atul Bansal</p>
 
           <div class="contact-list">
             <div class="contact-item">
@@ -67,11 +67,11 @@
             </div>
             <div class="contact-item">
               <strong>Location</strong>
-              <span>Rudrapur, Uttarakhand</span>
+              <span>31, Road, Alakhdeva, Ratanpura, Uttarakhand 263152, India</span>
             </div>
             <div class="contact-item">
               <strong>Business hours</strong>
-              <span>Mon–Sat • 9:00–18:00</span>
+              <span>Mon–Sat • 8:00–19:00</span>
             </div>
           </div>
 
@@ -121,7 +121,7 @@
     </div>
   </footer>
 
-  <!-- <script>
+  <script>
     const yearEl = document.getElementById("year");
     if (yearEl) yearEl.textContent = new Date().getFullYear();
 
@@ -159,7 +159,6 @@
       }, { threshold: 0.12 });
       revealEls.forEach(el => io.observe(el));
     }
-  </script> -->
-<script src="../assets/js/main.js" defer></script>
+  </script>
 </body>
 </html>
